adding save function

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>Mongo Scraper</title>
+  <title>ESPN.com Mongo Scraper</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/paper/bootstrap.min.css">
@@ -31,7 +31,7 @@
   </div>
   <div class="caption">
     <h1>Mongo Scraper</h1>
-    <p>New York Times Edition</p>
+    <p>ESPN.com Edition</p>
   </div>
 </div>
 <div class="container-fluid article-container">
@@ -39,7 +39,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p>New York Times Mongo Scraper</p>
+    <p>ESPN.com Scraper</p>
   </div>
 </footer>
 
