--- a/public/saved.html
+++ b/public/saved.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>Mongo Scraper</title>
+  <title>ESPN.com Mongo Scraper</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/paper/bootstrap.min.css">
@@ -29,7 +29,7 @@
   <div class="background-image">
   </div>
   <div class="caption">
-    <h1>Saved Articles</h1>
+    <h1>Saved ESPN.com Articles</h1>
     <p>Your Saved Articles</p>
   </div>
 </div>
@@ -38,7 +38,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p>New York Times Mongo Scraper</p>
+    <p>ESPN.com Mongo Scraper</p>
   </div>
 </footer>
 
